crates/serde-feather/tests/ui/field_duplicate_skip_deserializing.rs
use serde_feather::FeatherDeserialize;

#[derive(FeatherDeserialize)]
struct DuplicateSkipDeserializingField {
    #[serde(skip_deserializing, skip_deserializing)]
    value: u8,
}

fn main() {}
